--- a/copy_text.html
+++ b/copy_text.html
@@ -84,24 +84,11 @@
       nameCells.forEach((cell) => cell.classList.remove('copied'));
     }
 
-    async function copyText(text, nameCell) {
-      try {
-        await navigator.clipboard.writeText(text);
-      } catch (err) {
-        // Fallback for older browsers
-        const textarea = document.createElement('textarea');
-        textarea.value = text;
-        textarea.style.position = 'fixed';
-        textarea.style.opacity = '0';
-        document.body.appendChild(textarea);
-        textarea.focus();
-        textarea.select();
-        document.execCommand('copy');
-        document.body.removeChild(textarea);
-      }
-
-      clearCopiedStyles();
-      nameCell.classList.add('copied');
+    function copyText(text, nameCell) {
+      navigator.clipboard.writeText(text).then(() => {
+        clearCopiedStyles();
+        nameCell.classList.add('copied');
+      });
     }
 
     function render() {
