--- a/copy_text.html
+++ b/copy_text.html
@@ -28,17 +28,13 @@
 
     td {
       border: 1px solid var(--border-color);
-      padding: 8px 10px;
+      padding: 5px 10px;
       vertical-align: top;
     }
 
     td.col-action {
       width: 90px;
       white-space: nowrap;
-    }
-
-    td.col-name {
-      width: 180px;
     }
 
     td.col-text {
@@ -58,7 +54,10 @@
       background: var(--btn-bg-hover);
     }
 
-    .copied {
+    .copy-btn.copied {
+      background: #2ea043;
+      border-color: #2a8f3c;
+      color: #fff;
       font-weight: 700;
     }
   </style>
@@ -80,14 +79,14 @@
     const table = document.getElementById('items-table');
 
     function clearCopiedStyles() {
-      const nameCells = table.querySelectorAll('td.col-name');
-      nameCells.forEach((cell) => cell.classList.remove('copied'));
+      const buttons = table.querySelectorAll('.copy-btn');
+      buttons.forEach((button) => button.classList.remove('copied'));
     }
 
-    function copyText(text, nameCell) {
+    function copyText(text, button) {
       navigator.clipboard.writeText(text).then(() => {
         clearCopiedStyles();
-        nameCell.classList.add('copied');
+        button.classList.add('copied');
       });
     }
 
@@ -101,21 +100,16 @@
         const btn = document.createElement('button');
         btn.className = 'copy-btn';
         btn.type = 'button';
-        btn.textContent = 'copy';
+        btn.textContent = row.name;
         tdAction.appendChild(btn);
-
-        const tdName = document.createElement('td');
-        tdName.className = 'col-name';
-        tdName.textContent = row.name;
 
         const tdText = document.createElement('td');
         tdText.className = 'col-text';
         tdText.textContent = row.text;
 
-        btn.addEventListener('click', () => copyText(row.text, tdName));
+        btn.addEventListener('click', () => copyText(row.text, btn));
 
         tr.appendChild(tdAction);
-        tr.appendChild(tdName);
         tr.appendChild(tdText);
         table.appendChild(tr);
       });
