Small usability improvements.

--- a/copy_text.html
+++ b/copy_text.html
@@ -28,13 +28,14 @@
 
     td {
       border: 1px solid var(--border-color);
-      padding: 5px 10px;
+      padding: 3px 10px;
       vertical-align: top;
     }
 
     td.col-action {
       width: 90px;
       white-space: nowrap;
+      text-align: right;
     }
 
     td.col-text {
@@ -48,6 +49,7 @@
       background: var(--btn-bg);
       border-radius: 4px;
       cursor: pointer;
+      width: 100%;
     }
 
     .copy-btn:hover {
